@@ -2,3 +2,8 @@
 This project doesn't aim to provide best practices of any regards and has educational purposes of learning some SpringBoot and DevOps code by practice. 
 
 Check Todos for a better "roadmap".
+
+## Important: 
+Add `--add-opens=java.base/java.time=all-unnamed` to your vm options\n
+If you're on Windows, add it to `JAVA_TOOL_OPTIONS` env variable\n 
+reason: https://github.com/spring-projects/spring-data-mongodb/issues/3893 ; https://stackoverflow.com/questions/70412805/what-does-this-error-mean-java-lang-reflect-inaccessibleobjectexception-unable
